Fix constructing pot branch dirs for symlinked dirs

BUG: 472605